--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,6 +1,12 @@
-<span class="clicked">{{clicked}}</span>
-<span class="resized">{{resized}}</span>
-<button {{action 'toggleShow'}} class="show">Toggle show!</button>
+<div class="counters">
+  <span class="clicked">{{clicked}}</span>
+  <span class="resized">{{resized}}</span>
+</div>
+<div class="controls">
+  <button {{action 'toggleShow'}} class="show">Toggle show!</button>
+  <button {{action 'toggleHandling'}} class="handling">Toggle handling!</button>
+  <button {{action 'triggerResize'}} class="resize">Trigger resize!</button>
+</div>
 {{#if show}}
-  {{dummy-component clicked=(mut clicked) resized=(mut resized)}}
+  {{dummy-component clicked=(mut clicked) resized=(mut resized) handling=handling}}
 {{/if}}
