--- a/tests/dummy/app/templates/components/dummy-component.hbs
+++ b/tests/dummy/app/templates/components/dummy-component.hbs
@@ -1,1 +1,13 @@
 <button class="button">Click me!</button>
+<div>
+  Times scrolled:
+  <span class="scrolled">{{scrolled}}</span>
+</div>
+<div>
+  The document is <span class="visibility">{{visibility}}</span>!
+</div>
+<div style="width: 300px; height: 200px; overflow: scroll;" class="scrollable">
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ac magna eu risus suscipit suscipit vitae vitae mi. Proin quis mauris sit amet arcu feugiat pretium semper id urna. In vel massa egestas, dapibus diam vitae, molestie lectus. Proin et malesuada urna. Etiam dolor lectus, rutrum at magna ac, fringilla dapibus felis. Donec eget faucibus orci, et condimentum nisi. Fusce bibendum, ex quis elementum tristique, enim lorem cursus nibh, ut feugiat mauris sem a est. Maecenas ac cursus tortor, id faucibus dui. Quisque quis sagittis orci. Duis vulputate risus id metus porta congue. Suspendisse non lacinia orci.</p>
+  <p>Phasellus quis dolor ac lacus varius malesuada. Phasellus faucibus porttitor ante sit amet varius. Etiam et egestas turpis. Nullam quis felis odio. Fusce eu turpis ornare, accumsan elit non, mollis odio. Proin in lacinia lorem. Nunc eu dictum nibh, in laoreet diam. Proin eleifend nisl in elementum ullamcorper.</p>
+  <p>Duis quis feugiat quam, et ultrices ligula. Praesent diam lacus, cursus quis lorem et, convallis sollicitudin eros. Vivamus ac volutpat orci. Maecenas eget feugiat ex. Donec eget dictum tellus, vel tristique nisi. Duis gravida lectus non dui tincidunt porttitor. Nam sed nulla a enim tincidunt pulvinar. Quisque pulvinar, ligula eget facilisis laoreet, tortor dui congue lacus, non ultricies sem diam nec sem. Nullam egestas feugiat est. Cras velit justo, ullamcorper id fringilla vel, viverra sed ante.</p>
+</div>
